--- a/.github/workflows/publish-to-test-pypi.yml
+++ b/.github/workflows/publish-to-test-pypi.yml
@@ -100,6 +100,7 @@ jobs:
     runs-on: ubuntu-latest
     strategy:
       matrix:
+        os: [windows-2022, macos-15, ubuntu-22.04]
         python-version: ["3.9", "3.10", "3.11", "3.12", "3.13", "3.14"]
     environment:
       name: pypi
@@ -110,12 +111,7 @@ jobs:
     - name: Download all the dists
       uses: actions/download-artifact@v4
       with:
-        name: python-package-distributions-ubuntu-22.04${{ matrix.python-version }}
-        path: dist/
-    - name: Download all windows the dists
-      uses: actions/download-artifact@v4
-      with:
-        name: python-package-distributions-windows-2022${{ matrix.python-version }}
+        name: python-package-distributions-${{ matrix.os }}${{ matrix.python-version }}
         path: dist/
     - name: Publish distribution 📦 to PyPI
       uses: pypa/gh-action-pypi-publish@release/v1
@@ -127,6 +123,7 @@ jobs:
     runs-on: ubuntu-latest
     strategy:
       matrix:
+        os: [windows-2022, macos-15, ubuntu-22.04]
         python-version: ["3.9", "3.10", "3.11", "3.12", "3.13", "3.14"]
     environment:
       name: testpypi
@@ -137,12 +134,7 @@ jobs:
     - name: Download all the dists
       uses: actions/download-artifact@v4
       with:
-        name: python-package-distributions-ubuntu-22.04${{ matrix.python-version }}
-        path: dist/
-    - name: Download all windows the dists
-      uses: actions/download-artifact@v4
-      with:
-        name: python-package-distributions-windows-2022${{ matrix.python-version }}
+        name: python-package-distributions-${{ matrix.os }}${{ matrix.python-version }}
         path: dist/
     - name: Publish distribution 📦 to TestPyPI
       uses: pypa/gh-action-pypi-publish@release/v1
