--- a/.github/workflows/publish-to-test-pypi.yml
+++ b/.github/workflows/publish-to-test-pypi.yml
@@ -7,13 +7,13 @@ on:
     - '*'
   workflow_dispatch:
 jobs:
-  build-windows:
-    name: Build distribution Windows 📦
+  build-windows-macos:
+    name: Build distribution Windows and MacOS 📦
     runs-on: ${{ matrix.os }}
     strategy:
       matrix:
-        os: [windows-2022]
-        python-version: ["3.8", "3.9", "3.10", "3.11", "3.12"]
+        os: [windows-2022, macos-15]
+        python-version: ["3.9", "3.10", "3.11", "3.12", "3.13", "3.14"]
 
     steps:
     - uses: actions/checkout@v4
@@ -34,6 +34,12 @@ jobs:
       run: |
         $env:KUN_USE_GIT_VERSION=${{ startsWith(github.ref, 'refs/tags/') && '0' || '1' }}
         python3 -m build --wheel
+    - name: Build a binary wheel and a source tarball (macos)
+      if: runner.os == 'macOS'
+      run: |
+        export MACOSX_DEPLOYMENT_TARGET=15.0
+        export KUN_USE_GIT_VERSION=${{ startsWith(github.ref, 'refs/tags/') && '0' || '1' }}
+        python3 -m build --wheel
     - name: Store the distribution packages
       uses: actions/upload-artifact@v4
       with:
@@ -45,8 +51,6 @@ jobs:
     strategy:
       matrix:
         include:
-          - python-version: "3.8"
-            cp-tag: "cp38"
           - python-version: "3.9"
             cp-tag: "cp39"
           - python-version: "3.10"
@@ -55,6 +59,10 @@ jobs:
             cp-tag: "cp311"
           - python-version: "3.12"
             cp-tag: "cp312"
+          - python-version: "3.13"
+            cp-tag: "cp313"
+          - python-version: "3.14"
+            cp-tag: "cp314"
     steps:
     - uses: actions/checkout@v4
       with:
@@ -87,12 +95,13 @@ jobs:
       Publish Python 🐍 distribution 📦 to PyPI
     if: startsWith(github.ref, 'refs/tags/')  # only publish to PyPI on tag pushes
     needs:
-    - build-windows
+    - build-windows-macos
     - build-linux
     runs-on: ubuntu-latest
     strategy:
       matrix:
-        python-version: ["3.8", "3.9", "3.10", "3.11", "3.12"]
+        os: [windows-2022, macos-15, ubuntu-22.04]
+        python-version: ["3.9", "3.10", "3.11", "3.12", "3.13", "3.14"]
     environment:
       name: pypi
       url: https://pypi.org/p/KunQuant  # Replace <package-name> with your PyPI project name
@@ -102,24 +111,20 @@ jobs:
     - name: Download all the dists
       uses: actions/download-artifact@v4
       with:
-        name: python-package-distributions-ubuntu-22.04${{ matrix.python-version }}
-        path: dist/
-    - name: Download all windows the dists
-      uses: actions/download-artifact@v4
-      with:
-        name: python-package-distributions-windows-2022${{ matrix.python-version }}
+        name: python-package-distributions-${{ matrix.os }}${{ matrix.python-version }}
         path: dist/
     - name: Publish distribution 📦 to PyPI
       uses: pypa/gh-action-pypi-publish@release/v1
   publish-to-testpypi:
     name: Publish Python 🐍 distribution 📦 to TestPyPI
     needs:
-    - build-windows
+    - build-windows-macos
     - build-linux
     runs-on: ubuntu-latest
     strategy:
       matrix:
-        python-version: ["3.8", "3.9", "3.10", "3.11", "3.12"]
+        os: [windows-2022, macos-15, ubuntu-22.04]
+        python-version: ["3.9", "3.10", "3.11", "3.12", "3.13", "3.14"]
     environment:
       name: testpypi
       url: https://test.pypi.org/p/KunQuant
@@ -129,12 +134,7 @@ jobs:
     - name: Download all the dists
       uses: actions/download-artifact@v4
       with:
-        name: python-package-distributions-ubuntu-22.04${{ matrix.python-version }}
-        path: dist/
-    - name: Download all windows the dists
-      uses: actions/download-artifact@v4
-      with:
-        name: python-package-distributions-windows-2022${{ matrix.python-version }}
+        name: python-package-distributions-${{ matrix.os }}${{ matrix.python-version }}
         path: dist/
     - name: Publish distribution 📦 to TestPyPI
       uses: pypa/gh-action-pypi-publish@release/v1
