--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -14,12 +14,18 @@ set(CMAKE_BUILD_WITH_INSTALL_RPATH TRUE)
 option(KUN_AVX512 "Enable AVX512 instruction set" OFF)
 option(KUN_AVX512DQ "Enable AVX512DQ instruction set" OFF)
 option(KUN_AVX512VL "Enable AVX512VL instruction set" OFF)
+option(KUN_NO_AVX2 "Disable AVX2 and FMA instruction set" OFF)
+
 
 if (CMAKE_CXX_COMPILER_ID MATCHES "(Clang|GNU|AppleClang)")
     set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++11 -fvisibility=hidden -fvisibility-inlines-hidden -pthread")
     if(CMAKE_SYSTEM_PROCESSOR MATCHES "(amd64|x86_64|AMD64)")
         message(STATUS "Building for x86_64 architecture")
-        set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS}  -mavx2 -mfma")
+        if (NOT KUN_NO_AVX2)
+            set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -mavx2 -mfma")
+        else()
+            message(STATUS "AVX2 and FMA instruction sets are disabled")
+        endif()
     endif()
     if(KUN_AVX512)
         set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -mavx512f")
@@ -32,6 +38,11 @@ if (CMAKE_CXX_COMPILER_ID MATCHES "(Clang|GNU|AppleClang)")
     endif()
 else()
     set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} /wd4251 /wd4200 /wd4305")
+    if (NOT KUN_NO_AVX2)
+        set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} /arch:AVX2")
+    else()
+        message(STATUS "AVX2 and FMA instruction sets are disabled")
+    endif()
     if(KUN_AVX512 OR KUN_AVX512DQ OR KUN_AVX512VL)
         # MSVC has only one flag for AVX512
         set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} /arch:AVX512")
