add windows stream test

--- a/.github/workflows/ccpp.yml
+++ b/.github/workflows/ccpp.yml
@@ -106,6 +106,7 @@ jobs:
         python tests/test.py
         python tests/test2.py
         python tests/test_runtime.py
+        python tests/test_stream.py
     - name: Alpha158 test
       working-directory: ./
       run: |
